@@ -2,6 +2,8 @@ package com.eldercare.eldercare.Model;
 
 import android.content.Context;
 import android.os.Bundle;
+import android.os.Handler;
+import android.os.Looper;
 
 import com.android.volley.Request;
 import com.android.volley.RequestQueue;
@@ -16,19 +18,33 @@ import com.google.gson.Gson;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 public class M_AIDoctor {
 
     //API Url
-    private static final String OPENAI_URL = "https://api.openai.com/v1/chat/completions";
+    private static final String openaiURL = "https://api.openai.com/v1/chat/completions";
     //AI Model Type
-    private static final String OPENAI_MODEL = "gpt-4o-mini";
+    private static final String openaiModel = "gpt-4o-mini";
     //API KEY
-    private static final String OPENAI_API_KEY = BuildConfig.OPENAI_API_KEY;
+    private static final String openaiApiKey = BuildConfig.OPENAI_API_KEY;
 
     private final RequestQueue requestQueue;
     private final Gson gson;
+
+    private final String prePrompt = "You are an AI Doctor prototype designed to help users analyze possible conditions based on their reported symptoms.\n\n"
+            + "Your goals are:\n"
+            + "1. Symptom Analysis: Collect and analyze the user’s described symptoms. Ask clarifying questions if needed (e.g., onset, duration, severity, accompanying factors).\n"
+            + "2. Differential Diagnosis: Provide a list of possible conditions, ranked by likelihood or grouped by severity (common/benign vs. serious/urgent).\n"
+            + "3. Explanations: Give clear, medically accurate explanations of why each condition might be relevant, based on the symptoms provided.\n"
+            + "4. Red Flags: Highlight urgent warning signs and recommend seeking professional medical care if symptoms suggest a potentially serious condition.\n"
+            + "5. Limitations: Always remind the user that you are not a licensed physician, your output is for informational purposes only, and you cannot provide a definitive medical diagnosis or prescribe treatment.\n\n"
+            + "Response Format:\n"
+            + "- Symptom Summary: Restate the user’s key symptoms concisely.\n"
+            + "- Possible Explanations: Provide a structured list of conditions or categories.\n"
+            + "- Next Steps: Suggest what the user could do (e.g., lifestyle tips, when to see a doctor, urgent signs to monitor).\n"
+            + "- Disclaimer: Always include a clear disclaimer about not replacing professional medical advice.\n";
 
     //Callback Interfaces
     public interface OnSuccessCallBack {
@@ -44,15 +60,18 @@ public class M_AIDoctor {
         this.gson = new Gson();
     }
 
-    public void sendQuery(String query, OnSuccessCallBack onSuccess, OnErrorCallBack onError) {
+    public void askAI(String query, OnSuccessCallBack onSuccess, OnErrorCallBack onError) {
         ChatRequest chat_request = new ChatRequest(
-                OPENAI_MODEL,
-                Arrays.asList(new Message("user", query))
+                openaiModel,
+                List.of(
+                    new Message("system", prePrompt),
+                    new Message("user", query)
+                )
         );
         String json_body = gson.toJson(chat_request);
         StringRequest request = new StringRequest(
             Request.Method.POST,
-            OPENAI_URL,
+            openaiURL,
                 responseStr -> {
                     try {
                         ChatCompletionResponse resp = gson.fromJson(responseStr, ChatCompletionResponse.class);
@@ -88,11 +107,37 @@ public class M_AIDoctor {
             @Override
             public Map<String, String> getHeaders() {
                 Map<String, String> headers = new HashMap<>();
-                headers.put("Authorization", "Bearer " + OPENAI_API_KEY);
+                headers.put("Authorization", "Bearer " + openaiApiKey);
                 headers.put("Content-Type", "application/json");
                 return headers;
             }
         };
         requestQueue.add(request);
+    }
+
+    public void askAITest(String query, OnSuccessCallBack onSuccess, OnErrorCallBack onError) {
+        // Simulate network delay
+        new Handler(Looper.getMainLooper()).postDelayed(() -> {
+
+            // Fixed responses based on query keywords
+            String response;
+            String query_lower = query.toLowerCase();
+
+            if (query_lower.contains("headache") || query_lower.contains("head")) {
+                response = "For headaches, try resting in a quiet, dark room. Stay hydrated and consider over-the-counter pain relievers if appropriate. If headaches persist or worsen, please consult a healthcare professional.";
+            } else if (query_lower.contains("fever") || query_lower.contains("temperature")) {
+                response = "For fever, rest and stay hydrated. Monitor your temperature regularly. If fever exceeds 101.3°F (38.5°C) or persists for more than 3 days, seek medical attention immediately.";
+            } else if (query_lower.contains("cough")) {
+                response = "For persistent cough, stay hydrated, use honey (for adults), and avoid irritants. If cough lasts more than 2 weeks or is accompanied by blood, fever, or difficulty breathing, consult a doctor.";
+            } else if (query_lower.contains("stomach") || query_lower.contains("nausea")) {
+                response = "For stomach issues, try eating bland foods like rice, bananas, or toast. Stay hydrated with small sips of water. Avoid dairy and fatty foods. Seek medical help if symptoms persist or worsen.";
+            } else {
+                response = "Thank you for your question about: '" + query + "'. This is a test response. Please consult with a healthcare professional for proper medical advice. Remember, this AI assistant is for informational purposes only.";
+            }
+
+            // Simulate success callback
+            onSuccess.onSuccess(response);
+
+        }, 1500); // 1.5 second delay to simulate network request
     }
 }
